# Secret-Game-Engine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  contributing.md  createNewProject.sh  debug.json  premake5.lua  release.json
SecretCLI/: SecretCLI  cliInfo.json  premake5.lua
SecretCLI/CLI/: main.cpp
SecretCLI/CLIParser/: main.cpp  parser.cpp  parser.hpp
SecretCLI/CLIParser/context/: contextParser.cpp  contextParser.hpp
SecretCLI/CLIScripts/: buildProject.sh
SecretCLI/buildScripts/: buildLinux.sh
SecretCLI/common/: common.hpp
SecretCLI/docs/: commands.md
buildScripts/: buildDependencies.sh  buildEngine.sh  buildEngineDEBUG.sh  premake5.lua
cli/: commands.cpp  commands.hpp
elogineCLI/src/: main.cpp
engine/: CMakeLists.txt  engineInfo.json
engine/debug/: HUGE.hpp
engine/debug/core/: HUGE.cpp
engine/deprecated/: elogine.cpp  elogine.hpp
engine/src/: ELOgine.hpp  HUGE.hpp  elogine.cpp  elogine.hpp  secret.hpp
engine/template/: CMakeLists.txt  premake5.lua  projectInfo.json  update.sh
engine/template/buildScripts/: build.sh  buildAndRun.sh  premake5.lua
engine/template/src/: main.cpp
hugeCLI/src/: main.cpp
include/: ELOgine.h  ELOgine.hpp  entity.h  entity.hpp  input.h  keys.hpp  output.hpp  render.hpp  text.h  text.hpp
secretCLI/: cliInfo.json
secretCLI/CLI/: main.cpp  secretCLI.hpp
secretCLI/CLIScripts/: runProject.sh
secretCLI/buildScripts/: buildAndRun.sh  premake5.lua
secretCLI/parser/: main.cpp
secretCLI/src/: main.cpp
src/: entity.cpp  input.cpp  keys.cpp  output.cpp  render.cpp  text.cpp
(+72 files in other folders)
